# stack-machine

./: .gitignore  CMakeLists.txt
